guestbook-app/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: haproxy
  name: frontend-ingress
spec:
  rules:
  - host: Your-Unique-Host-Name.nrp-nautilus.io
    http:
      paths:
      - backend:
          service:
            name: frontend-service
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - Your-Unique-Host-Name.nrp-nautilus.io
